# Devops-and-More

./: dbmongomigration.md  ipsec.conf  mongodbbasic.md  mongodbbegin.md  mongodbreplication.md  mongodocker  mongomasterslave.md  openvpns2s.md  postgres.md
ansible/: ansible.cfg  readme.md
cron/ansible/: readme.md
cron/litmus-chaos/: chaos-container-kill-engine.yaml
docs/docs-template/: Dockerfile
docs/publish/: .dockerignore  .gitignore  conf.py  index.md  pyproject.toml
docs/publish/logging/: elastic-limit-indices-to-specific-space.md  filebeat-setup-on-kubernetes.md
docs/publish/procedures/: create-git-repo.md  how-to-contribute-on-git-repo.md
elk/: .gitignore  README.md
elk/ansible/: ansible.cfg  readme.md
elk/elk-logging/: .env.apm  .env.es  .env.kibana  Readme.md  apm-docker-compose.yml  docker-compose.tls.yml  kibana-docker-compose.yml
ispconfig-ansible/: inventory  main.yml
kubernetes/setup/: README.md  setup-cert-manager.md
lido-code 5/: README.md
lido-code 5/HAV-FW-UDP4-1195-leardevel 2/: HAV-FW-UDP4-1195-leardevel-tls.key  HAV-FW-UDP4-1195-leardevel.ovpn  HAV-FW-UDP4-1195-leardevel.p12
lido-code 5/dev-backup/: dev-deploy-prometheus.yaml  dev-prometheus.yaml  dev-teku-validator-ln4.yaml  dev-teku-validator-ln5.yaml  dev-teku-validator-ln6.yaml  ingress-nginx-deploy.yaml  ln4-dev-besu-client-exec.yaml  ln4-teku-beacon.yaml  ln5-dev-besu-client-exec.yaml  ln5-teku-beacon.yaml  ln6-dev-besu-client-exec.yaml  ln6-teku-beacon.yaml  sc-besupath.yaml  (+1 more)
litmus-chaos/: chaos-pod-delete-engine.yaml
terraform/: .env.example  README-SETUP.md
(+323 files in other folders)
