[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["stackexpress-jawed <jawed.salim@stackexpress.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^4.4.0"
myst-parser = "^0.17.0"
sphinx-rtd-theme = "^1.0.0"
sphinx-book-theme = "^0.2.0"
linkify-it-py = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
